pkg/templates/terraform/aws/environment/main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "~> 4.20.1"
    }
  }
}

provider "aws" {
  region = local.region
}

locals {
  name = "nopeus-${local.nopeus_stack_name}-${local.environment}"
  cluster_version = "1.22"
  region = "us-west-1"
  environment = "{{ .Environment }}"
  nopeus_stack_name = "{{ .Name }}"

  network_cidr = "172.16.0.0/16"

  tags = {
    ManagedBy = "Salfati Group - Nopeus"
    NopeusVersion = "1.0.0-alpha.1"
  }
}

data "aws_caller_identity" "current-{{ .Name }}-{{ .Environment }}" {}
data "aws_availability_zones" "available-{{ .Name }}-{{ .Environment }}" {}

# outputs
output "name" {
  value = local.name
}

output "region" {
  value = local.region
}

output "environment" {
  value = local.environment
}

output "cluster_identifier" {
  value = aws_eks_cluster.aws-cluster-{{ .Name }}-{{ .Environment }}.arn
}

################################################################################
# EKS Module
################################################################################
resource "aws_eks_cluster" "aws-cluster-{{ .Name }}-{{ .Environment }}" {
  name = local.name
  version = local.cluster_version
  role_arn = aws_iam_role.aws-cluster-iam-{{ .Name }}-{{ .Environment }}.arn

  vpc_config {
    security_group_ids = [aws_security_group.aws-cluster-worker-{{ .Name }}-{{ .Environment }}.id]
    subnet_ids = aws_subnet.aws-subnet-{{ .Name }}-{{ .Environment }}[*].id
  }

  depends_on = [
    aws_iam_role_policy_attachment.aws-cluster-AmazonEKSClusterPolicy-{{ .Name }}-{{ .Environment }},
    aws_iam_role_policy_attachment.aws-cluster-AmazonEKSServicePolicy-{{ .Name }}-{{ .Environment }},
  ]

  tags = merge(
    local.tags,
    {
      Name = local.name
    }
  )
}

resource "aws_eks_node_group" "aws-cluster-node-{{ .Name }}-{{ .Environment }}" {
  cluster_name = aws_eks_cluster.aws-cluster-{{ .Name }}-{{ .Environment }}.name
  node_group_name = "${aws_eks_cluster.aws-cluster-{{ .Name }}-{{ .Environment }}.name}-node"
  node_role_arn   = aws_iam_role.aws-node-iam-{{ .Name }}-{{ .Environment }}.arn
  subnet_ids      = aws_subnet.aws-subnet-{{ .Name }}-{{ .Environment }}[*].id

  scaling_config {
    desired_size = 2
    max_size     = 6
    min_size     = 1
  }

  tags = merge(
    local.tags,
    {
      Name = "${aws_eks_cluster.aws-cluster-{{ .Name }}-{{ .Environment }}.name}-node",
      "kubernetes.io/cluster/${aws_eks_cluster.aws-cluster-{{ .Name }}-{{ .Environment }}.name}" = "owned",
    }
  )

  depends_on = [
    aws_iam_role_policy_attachment.aws-node-AmazonEKSWorkerNodePolicy-{{ .Name }}-{{ .Environment }},
    aws_iam_role_policy_attachment.aws-node-AmazonEKS_CNI_Policy-{{ .Name }}-{{ .Environment }},
    aws_iam_role_policy_attachment.aws-node-AmazonEC2ContainerRegistryReadOnly-{{ .Name }}-{{ .Environment }},
  ]
}

################################################################################
# Supporting Resources
################################################################################
resource "aws_vpc" "aws-vpc-{{ .Name }}-{{ .Environment }}" {
  cidr_block = local.network_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
    local.tags,
    {
      Name = local.name
    }
  )
}

resource "aws_subnet" "aws-subnet-{{ .Name }}-{{ .Environment }}" {
  count = 2

  vpc_id = aws_vpc.aws-vpc-{{ .Name }}-{{ .Environment }}.id
  cidr_block = cidrsubnet(aws_vpc.aws-vpc-{{ .Name }}-{{ .Environment }}.cidr_block, 8, count.index)
  availability_zone = data.aws_availability_zones.available-{{ .Name }}-{{ .Environment }}.names[count.index]

  map_public_ip_on_launch = true

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-subnet"
    }
  )
}

resource "aws_route_table" "internet_access-{{ .Name }}-{{ .Environment }}" {
  vpc_id = aws_vpc.aws-vpc-{{ .Name }}-{{ .Environment }}.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.aws-vpc-igw-{{ .Name }}-{{ .Environment }}.id
  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-internet-access"
    }
  )
}

resource "aws_route_table_association" "internet_access-{{ .Name }}-{{ .Environment }}" {
  count = length(aws_subnet.aws-subnet-{{ .Name }}-{{ .Environment }})
  subnet_id = aws_subnet.aws-subnet-{{ .Name }}-{{ .Environment }}[count.index].id
  route_table_id = aws_route_table.internet_access-{{ .Name }}-{{ .Environment }}.id
}

resource "aws_internet_gateway" "aws-vpc-igw-{{ .Name }}-{{ .Environment }}" {
  vpc_id = aws_vpc.aws-vpc-{{ .Name }}-{{ .Environment }}.id

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-internet-gateway"
    }
  )
}

# Security Rules

resource "aws_security_group" "aws-allow-icmp-{{ .Name }}-{{ .Environment }}" {
  name        = "aws-allow-icmp-${local.nopeus_stack_name}-${local.environment}"
  description = "Allow icmp access from anywhere"
  vpc_id      = aws_vpc.aws-vpc-{{ .Name }}-{{ .Environment }}.id

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-allow-icmp"
    }
  )
}

# Allow SSH for iperf testing.
resource "aws_security_group" "aws-allow-ssh-{{ .Name }}-{{ .Environment }}" {
  name        = "aws-allow-ssh-${local.nopeus_stack_name}-${local.environment}"
  description = "Allow ssh access from anywhere"
  vpc_id      = aws_vpc.aws-vpc-{{ .Name }}-{{ .Environment }}.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-allow-ssh"
    }
  )
}

# Allow TCP traffic from the Internet.
resource "aws_security_group" "aws-allow-internet-{{ .Name }}-{{ .Environment }}" {
  name        = "aws-allow-internet-${local.nopeus_stack_name}-${local.environment}"
  description = "Allow http traffic from the internet"
  vpc_id      = aws_vpc.aws-vpc-{{ .Name }}-{{ .Environment }}.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-allow-internet"
    }
  )
}

resource "aws_security_group" "aws-cluster-worker-{{ .Name }}-{{ .Environment }}" {
  name = "aws-cluster-worker-${local.nopeus_stack_name}-${local.environment}"
  description = "Allow all traffic from the cluster worker subnet"
  vpc_id = aws_vpc.aws-vpc-{{ .Name }}-{{ .Environment }}.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-cluster-worker"
    }
  )
}

resource "aws_security_group" "aws-cluster-node-{{ .Name }}-{{ .Environment }}" {
  name        = "aws-cluster-node-${local.nopeus_stack_name}-${local.environment}"
  description = "Security group for all nodes in the cluster"
  vpc_id      = aws_vpc.aws-vpc-{{ .Name }}-{{ .Environment }}.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.tags,
    {
      Name = "${aws_eks_cluster.aws-cluster-{{ .Name }}-{{ .Environment }}.name}-node",
      "kubernetes.io/cluster/${aws_eks_cluster.aws-cluster-{{ .Name }}-{{ .Environment }}.name}" = "owned",
    }
  )
}

resource "aws_security_group_rule" "aws-cluster-ingress-node-https-{{ .Name }}-{{ .Environment }}" {
  description              = "Allow pods to communicate with the cluster API Server"
  from_port                = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.aws-cluster-worker-{{ .Name }}-{{ .Environment }}.id
  source_security_group_id = aws_security_group.aws-cluster-node-{{ .Name }}-{{ .Environment }}.id
  to_port                  = 443
  type                    = "ingress"
}

resource "aws_iam_role" "aws-cluster-iam-{{ .Name }}-{{ .Environment }}" {
  name = "terraform-aws-cluster-iam-${local.nopeus_stack_name}-${local.environment}"
  tags = merge(
    local.tags,
    {
      Name = "${local.name}-cluster-iam"
    }
  )
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Principal = {
          Service = "eks.amazonaws.com"
        }
        Action = "sts:AssumeRole"
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "aws-cluster-AmazonEKSClusterPolicy-{{ .Name }}-{{ .Environment }}" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role = "${aws_iam_role.aws-cluster-iam-{{ .Name }}-{{ .Environment }}.name}"
}

resource "aws_iam_role_policy_attachment" "aws-cluster-AmazonEKSServicePolicy-{{ .Name }}-{{ .Environment }}" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
  role = "${aws_iam_role.aws-cluster-iam-{{ .Name }}-{{ .Environment }}.name}"
}

resource "aws_iam_role" "aws-node-iam-{{ .Name }}-{{ .Environment }}" {
  name = "aws-node-iam-${local.nopeus_stack_name}-${local.environment}"

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-node-iam"
    }
  )

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "aws-node-AmazonEKSWorkerNodePolicy-{{ .Name }}-{{ .Environment }}" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.aws-node-iam-{{ .Name }}-{{ .Environment }}.name
}

resource "aws_iam_role_policy_attachment" "aws-node-AmazonEKS_CNI_Policy-{{ .Name }}-{{ .Environment }}" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.aws-node-iam-{{ .Name }}-{{ .Environment }}.name
}

resource "aws_iam_role_policy_attachment" "aws-node-AmazonEC2ContainerRegistryReadOnly-{{ .Name }}-{{ .Environment }}" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.aws-node-iam-{{ .Name }}-{{ .Environment }}.name
}
















# ----------------- OLD --------------------

# terraform {
#   required_version = ">= 0.13.1"

#   required_providers {
#     aws = {
#       source  = "hashicorp/aws"
#       version = ">= 3.72"
#     }
#     tls = {
#       source  = "hashicorp/tls"
#       version = "~> 3.0"
#     }
#     kubernetes = {
#       source  = "hashicorp/kubernetes"
#       version = ">= 2.10"
#     }
#   }
# }


# provider "aws" {
#   region = local.region
# }

# provider "kubernetes" {
#   host                   = module.eks.cluster_endpoint
#   cluster_ca_certificate = base64decode(module.eks.cluster_certificate_authority_data)

#   exec {
#     api_version = "client.authentication.k8s.io/v1beta1"
#     command     = "aws"
#     # This requires the awscli to be installed locally where Terraform is executed
#     args = ["eks", "get-token", "--cluster-name", module.eks.cluster_id]
#   }
# }

# locals {
#   name            = "ex-${replace(basename(path.cwd), "_", "-")}"
#   cluster_version = "1.22"
#   region          = "us-west-1"

#   tags = {
#     ManagedBy = "Nopeus"
#     ManagingCompany = "Salfati Group Limited"
#     NopeusVersion = "1.0.0-alpha.1"
#   }
# }

# data "aws_caller_identity" "current" {}

# ################################################################################
# # EKS Module
# ################################################################################

# module "eks" {
#   source = "terraform-aws-modules/eks/aws"

#   cluster_name                    = local.name
#   cluster_version                 = local.cluster_version
#   cluster_endpoint_private_access = true
#   cluster_endpoint_public_access  = true

#   # IPV6
#   # cluster_ip_family = "ipv6"

#   # We are using the IRSA created below for permissions
#   # However, we have to deploy with the policy attached FIRST (when creating a fresh cluster)
#   # and then turn this off after the cluster/node group is created. Without this initial policy,
#   # the VPC CNI fails to assign IPs and nodes cannot join the cluster
#   # See https://github.com/aws/containers-roadmap/issues/1666 for more context
#   # TODO - remove this policy once AWS releases a managed version similar to AmazonEKS_CNI_Policy (IPv4)
#   # create_cni_ipv6_iam_policy = true

#   cluster_addons = {
#     coredns = {
#       resolve_conflicts = "OVERWRITE"
#     }
#     kube-proxy = {}
#     vpc-cni = {
#       resolve_conflicts        = "OVERWRITE"
#       # service_account_role_arn = module.vpc_cni_irsa.iam_role_arn
#     }
#   }

#   cluster_encryption_config = [{
#     provider_key_arn = aws_kms_key.eks.arn
#     resources        = ["secrets"]
#   }]

#   cluster_tags = {
#     # This should not affect the name of the cluster primary security group
#     # Ref: https://github.com/terraform-aws-modules/terraform-aws-eks/pull/2006
#     # Ref: https://github.com/terraform-aws-modules/terraform-aws-eks/pull/2008
#     Name = local.name
#   }

#   vpc_id     = module.vpc.vpc_id
#   subnet_ids = module.vpc.private_subnets

#   manage_aws_auth_configmap = true

#   # Extend cluster security group rules
#   cluster_security_group_additional_rules = {
#     egress_nodes_ephemeral_ports_tcp = {
#       description                = "To node 1025-65535"
#       protocol                   = "tcp"
#       from_port                  = 1025
#       to_port                    = 65535
#       type                       = "egress"
#       source_node_security_group = true
#     }
#   }

#   # Extend node-to-node security group rules
#   # node_security_group_ntp_ipv6_cidr_block = ["fd00:ec2::123/128"]
#   node_security_group_ntp_ipv4_cidr_block = ["169.254.169.123/32"]
#   node_security_group_additional_rules = {
#     ingress_self_all = {
#       description = "Node to node all ports/protocols"
#       protocol    = "-1"
#       from_port   = 0
#       to_port     = 0
#       type        = "ingress"
#       self        = true
#     }
#     egress_all = {
#       description      = "Node all egress"
#       protocol         = "-1"
#       from_port        = 0
#       to_port          = 0
#       type             = "egress"
#       cidr_blocks      = ["0.0.0.0/0"]
#       ipv6_cidr_blocks = ["::/0"]
#     }
#   }

#   eks_managed_node_group_defaults = {
#     ami_type       = "AL2_x86_64"
#     instance_types = ["m6i.xlarge", "m5.xlarge"]

#     # We are using the IRSA created below for permissions
#     # However, we have to deploy with the policy attached FIRST (when creating a fresh cluster)
#     # and then turn this off after the cluster/node group is created. Without this initial policy,
#     # the VPC CNI fails to assign IPs and nodes cannot join the cluster
#     # See https://github.com/aws/containers-roadmap/issues/1666 for more context
#     iam_role_attach_cni_policy = true
#   }

#   eks_managed_node_groups = {
#     # Default node group - as provided by AWS EKS
#     default_node_group = {
#       # By default, the module creates a launch template to ensure tags are propagated to instances, etc.,
#       # so we need to disable it to use the default template provided by the AWS EKS managed node group service
#       create_launch_template = false
#       launch_template_name   = ""

#       disk_size = 1000

#       # Remote access cannot be specified with a launch template
#       remote_access = {
#         ec2_ssh_key               = aws_key_pair.this.key_name
#         source_security_group_ids = [aws_security_group.remote_access.id]
#       }
#     }

#     # Default node group - as provided by AWS EKS using Bottlerocket
#     bottlerocket_default = {
#       # By default, the module creates a launch template to ensure tags are propagated to instances, etc.,
#       # so we need to disable it to use the default template provided by the AWS EKS managed node group service
#       create_launch_template = false
#       launch_template_name   = ""

#       ami_type = "BOTTLEROCKET_x86_64"
#       platform = "bottlerocket"
#     }

#     # Adds to the AWS provided user data
#     bottlerocket_add = {
#       ami_type = "BOTTLEROCKET_x86_64"
#       platform = "bottlerocket"

#       # this will get added to what AWS provides
#       bootstrap_extra_args = <<-EOT
#       # extra args added
#       [settings.kernel]
#       lockdown = "integrity"
#       EOT
#     }

#     # Custom AMI, using module provided bootstrap data
#     bottlerocket_custom = {
#       # Current bottlerocket AMI
#       ami_id   = data.aws_ami.eks_default_bottlerocket.image_id
#       platform = "bottlerocket"

#       # use module user data template to boostrap
#       enable_bootstrap_user_data = true
#       # this will get added to the template
#       bootstrap_extra_args = <<-EOT
#       # extra args added
#       [settings.kernel]
#       lockdown = "integrity"

#       [settings.kubernetes.node-labels]
#       "managed-by" = "salfati-group"
#       "salfati-group-app" = "nopeus"

#       [settings.kubernetes.node-taints]
#       "dedicated" = "experimental:PreferNoSchedule"
#       "special" = "true:NoSchedule"
#       EOT
#     }

#     # Use existing/external launch template
#     external_lt = {
#       create_launch_template  = false
#       launch_template_name    = aws_launch_template.external.name
#       launch_template_version = aws_launch_template.external.default_version
#     }

#     # Use a custom AMI
#     custom_ami = {
#       ami_type = "AL2_ARM_64"
#       # Current default AMI used by managed node groups - pseudo "custom"
#       ami_id = data.aws_ami.eks_default_arm.image_id

#       # This will ensure the boostrap user data is used to join the node
#       # By default, EKS managed node groups will not append bootstrap script;
#       # this adds it back in using the default template provided by the module
#       # Note: this assumes the AMI provided is an EKS optimized AMI derivative
#       enable_bootstrap_user_data = true

#       instance_types = ["t4g.medium"]
#     }

#     # Demo of containerd usage when not specifying a custom AMI ID
#     # (merged into user data before EKS MNG provided user data)
#     containerd = {
#       name = "containerd"

#       # See issue https://github.com/awslabs/amazon-eks-ami/issues/844
#       pre_bootstrap_user_data = <<-EOT
#       #!/bin/bash
#       set -ex
#       cat <<-EOF > /etc/profile.d/bootstrap.sh
#       export CONTAINER_RUNTIME="containerd"
#       export USE_MAX_PODS=false
#       export KUBELET_EXTRA_ARGS="--max-pods=110"
#       EOF
#       # Source extra environment variables in bootstrap script
#       sed -i '/^set -o errexit/a\\nsource /etc/profile.d/bootstrap.sh' /etc/eks/bootstrap.sh
#       EOT
#     }

#     # Complete
#     complete = {
#       name            = "complete-eks-mng"
#       use_name_prefix = true

#       subnet_ids = module.vpc.private_subnets

#       min_size     = 1
#       max_size     = 7
#       desired_size = 1

#       ami_id                     = data.aws_ami.eks_default.image_id
#       enable_bootstrap_user_data = true
#       bootstrap_extra_args       = "--container-runtime containerd --kubelet-extra-args '--max-pods=20'"

#       pre_bootstrap_user_data = <<-EOT
#       export CONTAINER_RUNTIME="containerd"
#       export USE_MAX_PODS=false
#       EOT

#       post_bootstrap_user_data = <<-EOT
#       echo "you are free little kubelet!"
#       EOT

#       capacity_type        = "ON_DEMAND"
#       force_update_version = true
#       instance_types       = ["m6i.xlarge", "m5.xlarge"]
#       labels = {
#         GithubRepo = "terraform-aws-eks"
#         GithubOrg  = "terraform-aws-modules"
#       }

#       taints = [
#         {
#           key    = "dedicated"
#           value  = "gpuGroup"
#           effect = "NO_SCHEDULE"
#         }
#       ]

#       update_config = {
#         max_unavailable_percentage = 50 # or set `max_unavailable`
#       }

#       description = "EKS managed node group example launch template"

#       ebs_optimized           = true
#       vpc_security_group_ids  = [aws_security_group.additional.id]
#       disable_api_termination = false
#       enable_monitoring       = true

#       block_device_mappings = {
#         xvda = {
#           device_name = "/dev/xvda"
#           ebs = {
#             volume_size           = 75
#             volume_type           = "gp3"
#             iops                  = 3000
#             throughput            = 150
#             encrypted             = true
#             kms_key_id            = aws_kms_key.ebs.arn
#             delete_on_termination = true
#           }
#         }
#       }

#       metadata_options = {
#         http_endpoint               = "enabled"
#         http_tokens                 = "required"
#         http_put_response_hop_limit = 2
#         instance_metadata_tags      = "disabled"
#       }

#       create_iam_role          = true
#       iam_role_name            = "eks-managed-node-group-complete-example"
#       iam_role_use_name_prefix = false
#       iam_role_description     = "EKS managed node group complete example role"
#       iam_role_tags = {
#         Purpose = "Protector of the kubelet"
#       }
#       iam_role_additional_policies = [
#         "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
#       ]

#       create_security_group          = true
#       security_group_name            = "eks-managed-node-group-complete-example"
#       security_group_use_name_prefix = false
#       security_group_description     = "EKS managed node group complete example security group"
#       security_group_rules = {
#         phoneOut = {
#           description = "Hello CloudFlare"
#           protocol    = "udp"
#           from_port   = 53
#           to_port     = 53
#           type        = "egress"
#           cidr_blocks = ["1.1.1.1/32"]
#         }
#         phoneHome = {
#           description                   = "Hello cluster"
#           protocol                      = "udp"
#           from_port                     = 53
#           to_port                       = 53
#           type                          = "egress"
#           source_cluster_security_group = true # bit of reflection lookup
#         }
#       }
#       security_group_tags = {
#         Purpose = "Protector of the kubelet"
#       }

#       tags = {
#         ExtraTag = "EKS managed node group complete example"
#       }
#     }
#   }

#   tags = local.tags
# }

# # References to resources that do not exist yet when creating a cluster will cause a plan failure due to https://github.com/hashicorp/terraform/issues/4149
# # There are two options users can take
# # 1. Create the dependent resources before the cluster => `terraform apply -target <your policy or your security group> and then `terraform apply`
# #   Note: this is the route users will have to take for adding additonal security groups to nodes since there isn't a separate "security group attachment" resource
# # 2. For addtional IAM policies, users can attach the policies outside of the cluster definition as demonstrated below
# resource "aws_iam_role_policy_attachment" "additional" {
#   for_each = module.eks.eks_managed_node_groups

#   policy_arn = aws_iam_policy.node_additional.arn
#   role       = each.value.iam_role_name
# }

# ################################################################################
# # Supporting Resources
# ################################################################################

# module "vpc" {
#   source  = "terraform-aws-modules/vpc/aws"
#   version = "~> 3.0"

#   name = local.name
#   cidr = "10.0.0.0/16"

#   azs             = ["${local.region}a", "${local.region}c"]
#   private_subnets = ["10.0.1.0/24", "10.0.3.0/24"]
#   public_subnets  = ["10.0.4.0/24", "10.0.6.0/24"]

#   # enable_ipv6                     = true
#   # assign_ipv6_address_on_creation = true
#   # create_egress_only_igw          = true

#   # public_subnet_ipv6_prefixes  = [0, 1, 2]
#   # private_subnet_ipv6_prefixes = [3, 4, 5]

#   enable_nat_gateway   = true
#   single_nat_gateway   = true
#   enable_dns_hostnames = true

#   enable_flow_log                      = true
#   create_flow_log_cloudwatch_iam_role  = true
#   create_flow_log_cloudwatch_log_group = true

#   public_subnet_tags = {
#     "kubernetes.io/cluster/${local.name}" = "shared"
#     "kubernetes.io/role/elb"              = 1
#   }

#   private_subnet_tags = {
#     "kubernetes.io/cluster/${local.name}" = "shared"
#     "kubernetes.io/role/internal-elb"     = 1
#   }

#   tags = local.tags
# }

# # module "vpc_cni_irsa" {
# #   source  = "terraform-aws-modules/iam/aws//modules/iam-role-for-service-accounts-eks"
# #   version = "~> 4.12"

# #   role_name_prefix      = "VPC-CNI-IRSA"
# #   attach_vpc_cni_policy = true
# #   vpc_cni_enable_ipv6   = true

# #   oidc_providers = {
# #     main = {
# #       provider_arn               = module.eks.oidc_provider_arn
# #       namespace_service_accounts = ["kube-system:aws-node"]
# #     }
# #   }

# #   tags = local.tags
# # }

# resource "aws_security_group" "additional" {
#   name_prefix = "${local.name}-additional"
#   vpc_id      = module.vpc.vpc_id

#   ingress {
#     from_port = 22
#     to_port   = 22
#     protocol  = "tcp"
#     cidr_blocks = [
#       "10.0.0.0/8",
#       "172.16.0.0/12",
#       "192.168.0.0/16",
#     ]
#   }

#   tags = local.tags
# }

# resource "aws_kms_key" "eks" {
#   description             = "EKS Secret Encryption Key"
#   deletion_window_in_days = 7
#   enable_key_rotation     = true

#   tags = local.tags
# }

# resource "aws_kms_key" "ebs" {
#   description             = "Customer managed key to encrypt EKS managed node group volumes"
#   deletion_window_in_days = 7
#   policy                  = data.aws_iam_policy_document.ebs.json
# }

# resource "aws_iam_service_linked_role" "autoscalingrole" {
#   aws_service_name = "autoscaling.amazonaws.com"

#   tags = merge(
#     local.tags,
#     {
#       Name = "eks-autoscaling-role"
#     }
#   )
# }

# # This policy is required for the KMS key used for EKS root volumes, so the cluster is allowed to enc/dec/attach encrypted EBS volumes
# data "aws_iam_policy_document" "ebs" {
#   # Copy of default KMS policy that lets you manage it
#   statement {
#     sid       = "Enable IAM User Permissions"
#     actions   = ["kms:*"]
#     resources = ["*"]

#     principals {
#       type        = "AWS"
#       identifiers = ["arn:aws:iam::${data.aws_caller_identity.current.account_id}:root"]
#     }
#   }

#   # Required for EKS
#   statement {
#     sid = "Allow service-linked role use of the CMK"
#     actions = [
#       "kms:Encrypt",
#       "kms:Decrypt",
#       "kms:ReEncrypt*",
#       "kms:GenerateDataKey*",
#       "kms:DescribeKey"
#     ]
#     resources = ["*"]

#     principals {
#       type = "AWS"
#       identifiers = [
#         "arn:aws:iam::${data.aws_caller_identity.current.account_id}:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling", # required for the ASG to manage encrypted volumes for nodes
#         module.eks.cluster_iam_role_arn,                                                                                                            # required for the cluster / persistentvolume-controller to create encrypted PVCs
#       ]
#     }
#   }

#   statement {
#     sid       = "Allow attachment of persistent resources"
#     actions   = ["kms:CreateGrant"]
#     resources = ["*"]

#     principals {
#       type = "AWS"
#       identifiers = [
#         "arn:aws:iam::${data.aws_caller_identity.current.account_id}:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
#         module.eks.cluster_iam_role_arn,
#       ]
#     }

#     condition {
#       test     = "Bool"
#       variable = "kms:GrantIsForAWSResource"
#       values   = ["true"]
#     }
#   }
# }

# # This is based on the LT that EKS would create if no custom one is specified (aws ec2 describe-launch-template-versions --launch-template-id xxx)
# # there are several more options one could set but you probably dont need to modify them
# # you can take the default and add your custom AMI and/or custom tags
# #
# # Trivia: AWS transparently creates a copy of your LaunchTemplate and actually uses that copy then for the node group. If you DONT use a custom AMI,
# # then the default user-data for bootstrapping a cluster is merged in the copy.

# resource "aws_launch_template" "external" {
#   name_prefix            = "external-eks-ex-"
#   description            = "EKS managed node group external launch template"
#   update_default_version = true

#   block_device_mappings {
#     device_name = "/dev/xvda"

#     ebs {
#       volume_size           = 100
#       volume_type           = "gp2"
#       delete_on_termination = true
#     }
#   }

#   monitoring {
#     enabled = true
#   }

#   # Disabling due to https://github.com/hashicorp/terraform-provider-aws/issues/23766
#   # network_interfaces {
#   #   associate_public_ip_address = false
#   #   delete_on_termination       = true
#   # }

#   # if you want to use a custom AMI
#   # image_id      = var.ami_id

#   # If you use a custom AMI, you need to supply via user-data, the bootstrap script as EKS DOESNT merge its managed user-data then
#   # you can add more than the minimum code you see in the template, e.g. install SSM agent, see https://github.com/aws/containers-roadmap/issues/593#issuecomment-577181345
#   # (optionally you can use https://registry.terraform.io/providers/hashicorp/cloudinit/latest/docs/data-sources/cloudinit_config to render the script, example: https://github.com/terraform-aws-modules/terraform-aws-eks/pull/997#issuecomment-705286151)
#   # user_data = base64encode(data.template_file.launch_template_userdata.rendered)

#   tag_specifications {
#     resource_type = "instance"

#     tags = {
#       Name      = "external_lt"
#       CustomTag = "Instance custom tag"
#     }
#   }

#   tag_specifications {
#     resource_type = "volume"

#     tags = {
#       CustomTag = "Volume custom tag"
#     }
#   }

#   tag_specifications {
#     resource_type = "network-interface"

#     tags = {
#       CustomTag = "EKS example"
#     }
#   }

#   tags = {
#     CustomTag = "Launch template custom tag"
#   }

#   lifecycle {
#     create_before_destroy = true
#   }
# }

# resource "tls_private_key" "this" {
#   algorithm = "RSA"
# }

# resource "aws_key_pair" "this" {
#   key_name_prefix = local.name
#   public_key      = tls_private_key.this.public_key_openssh

#   tags = local.tags
# }

# resource "aws_security_group" "remote_access" {
#   name_prefix = "${local.name}-remote-access"
#   description = "Allow remote SSH access"
#   vpc_id      = module.vpc.vpc_id

#   ingress {
#     description = "SSH access"
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["10.0.0.0/8"]
#   }

#   egress {
#     from_port        = 0
#     to_port          = 0
#     protocol         = "-1"
#     cidr_blocks      = ["0.0.0.0/0"]
#     ipv6_cidr_blocks = ["::/0"]
#   }

#   tags = local.tags
# }

# resource "aws_iam_policy" "node_additional" {
#   name        = "${local.name}-additional"
#   description = "Example usage of node additional policy"

#   policy = jsonencode({
#     Version = "2012-10-17"
#     Statement = [
#       {
#         Action = [
#           "ec2:Describe*",
#         ]
#         Effect   = "Allow"
#         Resource = "*"
#       },
#     ]
#   })

#   tags = local.tags
# }

# data "aws_ami" "eks_default" {
#   most_recent = true
#   owners      = ["amazon"]

#   filter {
#     name   = "name"
#     values = ["amazon-eks-node-${local.cluster_version}-v*"]
#   }
# }

# data "aws_ami" "eks_default_arm" {
#   most_recent = true
#   owners      = ["amazon"]

#   filter {
#     name   = "name"
#     values = ["amazon-eks-arm64-node-${local.cluster_version}-v*"]
#   }
# }

# data "aws_ami" "eks_default_bottlerocket" {
#   most_recent = true
#   owners      = ["amazon"]

#   filter {
#     name   = "name"
#     values = ["bottlerocket-aws-k8s-${local.cluster_version}-x86_64-*"]
#   }
# }

# ################################################################################
# # Tags for the ASG to support cluster-autoscaler scale up from 0
# ################################################################################

# locals {
#   cluster_autoscaler_label_tags = merge([
#     for name, group in module.eks.eks_managed_node_groups : {
#       for label_name, label_value in coalesce(group.node_group_labels, {}) : "${name}|label|${label_name}" => {
#         autoscaling_group = group.node_group_autoscaling_group_names[0],
#         key               = "k8s.io/cluster-autoscaler/node-template/label/${label_name}",
#         value             = label_value,
#       }
#     }
#   ]...)

#   cluster_autoscaler_taint_tags = merge([
#     for name, group in module.eks.eks_managed_node_groups : {
#       for taint in coalesce(group.node_group_taints, []) : "${name}|taint|${taint.key}" => {
#         autoscaling_group = group.node_group_autoscaling_group_names[0],
#         key               = "k8s.io/cluster-autoscaler/node-template/taint/${taint.key}"
#         value             = "${taint.value}:${taint.effect}"
#       }
#     }
#   ]...)

#   cluster_autoscaler_asg_tags = merge(local.cluster_autoscaler_label_tags, local.cluster_autoscaler_taint_tags)
# }

# resource "aws_autoscaling_group_tag" "cluster_autoscaler_label_tags" {
#   for_each = local.cluster_autoscaler_asg_tags

#   autoscaling_group_name = each.value.autoscaling_group

#   tag {
#     key   = each.value.key
#     value = each.value.value

#     propagate_at_launch = false
#   }
# }
